# prime-agent

./: .gitignore  CMakeLists.txt  README.md
apps/pi/: CMakeLists.txt  main.cpp
cmake/: PiPlatform.cmake
docs/: FEATURE-MAP.md  ROADMAP.md  SYSTEMS-STATUS.md  TUI-REWRITE.md
docs/incidents/: 2026-06-17-cjk-input-split.md  2026-06-17-errors-not-surfaced.md  2026-06-17-input-box-invisible.md  2026-06-17-interactive-mode-hang.md  2026-06-17-multi-turn-missing.md  2026-06-17-streaming-events-race.md  2026-06-17-v3-milestone.md  INDEX.md
libs/agent/: CMakeLists.txt
libs/agent/include/pi_agent/: agent_loop.hpp  tool.hpp
libs/agent/src/: agent_loop.cpp
libs/ai/: CMakeLists.txt
libs/ai/include/pi_ai/: event_stream.hpp  models.hpp  provider.hpp  stream_simple.hpp  types.hpp
libs/ai/include/pi_ai/providers/: anthropic.hpp  azure_openai.hpp  bedrock.hpp  google.hpp  minimax.hpp  mistral.hpp  openai.hpp
libs/ai/src/: event_stream.cpp  models.cpp  provider.cpp  register_providers.cpp  stream_simple.cpp
libs/ai/src/providers/: anthropic.cpp  azure_openai.cpp  bedrock.cpp  cloudflare.cpp  google.cpp  minimax.cpp  mistral.cpp  openai.cpp  openai_responses.cpp  openrouter.cpp
libs/coding/: CMakeLists.txt
libs/coding/include/pi_coding/: auth_storage.hpp  compaction.hpp  context_files.hpp  html_export.hpp  oauth.hpp  session_manager.hpp  settings_manager.hpp  skills.hpp
libs/coding/include/pi_coding/modes/: rpc.hpp
libs/coding/include/pi_coding/tools/: bash_tool.hpp  edit_tool.hpp  fetch_tool.hpp  find_tool.hpp  grep_tool.hpp  ls_tool.hpp  read_tool.hpp  web_search_tool.hpp  write_tool.hpp
libs/coding/src/: auth_storage.cpp  compaction.cpp  context_files.cpp  html_export.cpp  oauth.cpp  session_manager.cpp  settings_manager.cpp  skills.cpp
libs/coding/src/modes/: rpc.cpp
libs/coding/src/tools/: bash.cpp  edit.cpp  fetch.cpp  find.cpp  grep.cpp  ls.cpp  read.cpp  web_search.cpp  write.cpp
libs/core/: CMakeLists.txt
libs/core/include/pi_core/: ansi.hpp  env.hpp  error.hpp  file_io.hpp  json.hpp  lockfile.hpp  log.hpp  path.hpp  result.hpp  strutil.hpp  unicode_width.hpp
libs/core/src/: env.cpp  file_io.cpp  lockfile.cpp  log.cpp  path.cpp  unicode_width.cpp
libs/http/: CMakeLists.txt
libs/http/include/pi_http/: http_client.hpp  http_types.hpp  sse_parser.hpp
libs/http/src/: http_client.cpp  http_types.cpp  sse_parser.cpp
libs/tui/: CMakeLists.txt
libs/tui/include/pi_tui/: component.hpp  markdown_render.hpp  message_render.hpp  render_util.hpp  terminal.hpp  theme.hpp  think_filter.hpp  tui.hpp
libs/tui/include/pi_tui/components/: box.hpp  editor.hpp  footer.hpp  input.hpp  text.hpp
libs/tui/include/pi_tui/modes/: interactive.hpp
libs/tui/src/: markdown_render.cpp  message_render.cpp  render_util.cpp  terminal.cpp  theme.cpp  think_filter.cpp  tui.cpp
libs/tui/src/components/: editor.cpp  footer.cpp  input.cpp
libs/tui/src/modes/: interactive.cpp
pi-spec/: 00-INDEX.md  01-Repository.md  02-Build-and-Release.md  10-Module-pi-ai.md  100-Subsystem-Index.md  110-Subsystem-pi-ai.md  120-Subsystem-pi-agent-core.md  130-Subsystem-pi-tui.md  140-Subsystem-pi-coding-agent.md  150-Dependencies-Index.md  160-External-Services.md  170-Dependencies-pi-ai.md  180-Dependencies-pi-agent-core.md  190-Dependencies-pi-tui.md  20-Module-pi-agent-core.md  200-Dependencies-pi-coding-agent.md  210-Network-Protocols.md  220-Build-Toolchain-Deps.md  230-CPP-Port-Mapping.md  240-Implementation-Plan.md  30-Module-pi-tui.md  40-Module-pi-coding-agent.md  50-Features.md  60-Acceptance-Criteria.md  70-Architecture.md  80-Sequences.md  90-Interfaces.md
tests/: CMakeLists.txt  test_anthropic_parser.cpp  test_compaction.cpp  test_context_files.cpp  test_core.cpp  test_editor.cpp  test_framework.hpp  test_http.cpp  test_markdown.cpp  test_models.cpp  test_oauth.cpp  test_reliability.cpp  test_render.cpp  test_session.cpp  test_skills.cpp  test_sse.cpp  test_streaming.cpp  test_tools.cpp  test_tui.cpp
tools/: install.sh  pty_verify.py  release.sh  smoke_pi.sh  upstream-diff.sh
